# Babblelon

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  GEMINI.md  LANGUAGE_GENERALIZATION_SUMMARY.md  README.md  SECURITY_IMPLEMENTATION.md  SUPABASE_CONFIG.md  TODO.md  UI-TODO.md  main.py  package-lock.json  pubspec.yaml  pyproject.toml  requirements.txt  test_enhanced_romanization.py
.claude/agents/: mobile-game-ui-designer.md  security-vulnerability-scanner.md
.cursor/: mcp.json
.cursor/rules/: cursor_rules.mdc  flutter_rules.mdc
.github/workflows/: ci.yml
.kilocode/rules/: flutter-rules.md
android/app/: build.gradle.kts
assets/data/: beginner_food_vocabulary.json  boss_vocabulary.json  npc_initial_dialogues.json  npc_vocabulary_amara.json  npc_vocabulary_somchai.json  thai_writing_guide.json
assets/lottie/: shiny_effect.json  victory_confetti.json
backend/: main.py  test_pronunciation_api.py  test_translation.py
backend/data/: __init__.py  language_data.py  thai_homographs.py
backend/data_processing/: process_vocabulary.py
backend/prompts/: amara_prompt.txt  sombat_prompt.txt  somchai_prompt.txt
backend/services/: __init__.py  auth_service.py  azure_speech_tracker.py  connection_pool.py  google_cloud_service.py  homograph_service.py  latency_tracker.py  llm_service.py  openai_whisper_service.py  pronunciation_service.py  security_service.py  stt_service.py  translation_service.py  tts_service.py  validation_service.py
backend/utils/: __init__.py  device_detection.py
docs/: GAME_RUBRIC_FINAL.md
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_controller.dart  main.dart  test_main.dart
lib/constants/: app_constants.dart
lib/game/: babblelon_game.dart
lib/models/: app_tutorial_step.dart  assessment_model.dart  battle_item.dart  boss_data.dart  character_assessment_model.dart  character_models.dart  game_models.dart  local_storage_models.dart  npc_data.dart  npc_item_data.dart  popup_models.dart  quest_models.dart  supabase_models.dart  turn.dart
lib/overlays/: loading_overlay.dart  (+2 more)
linux/: CMakeLists.txt
scripts/: babbelon_prd_v0.5.md  babbelon_prd_v1.0.md  babbelon_research_plan.md  task-complexity-report.json
tasks/: task_001.txt  task_002.txt  task_003.txt  task_004.txt  task_005.txt  task_006.txt  task_007.txt  task_008.txt  task_009.txt  task_010.txt  task_011.txt  task_012.txt  tasks.json
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+177 files in other folders)
