[project]
name = "babblelon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "elevenlabs>=2.1.0",
    "fairseq>=0.12.2",
    "fastapi>=0.115.12",
    "google-genai>=1.17.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.5",
    "pythainlp>=5.1.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sounddevice>=0.5.2",
    "uvicorn>=0.34.3",
]
