[project]
name = "babblelon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "azure-cognitiveservices-speech>=1.44.0",
    "elevenlabs>=2.1.0",
    "fairseq>=0.12.2",
    "fastapi>=0.115.12",
    "google-cloud-speech>=2.25.0",
    "google-cloud-translate>=3.15.0",
    "google-genai>=1.17.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.3.1",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.5",
    "pydub>=0.25.1",
    "pythainlp>=5.1.2",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.2",
    "uvicorn>=0.34.3",
]
