[project]
name = "babblelon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.6"
dependencies = [
    "aiohttp>=3.12.15",
    "assemblyai>=0.42.0",
    "azure-cognitiveservices-speech>=1.44.0",
    "deepl>=1.17.0",
    "elevenlabs>=2.1.0",
    "fairseq>=0.12.2",
    "fastapi>=0.115.12",
    "google-cloud-speech>=2.25.0",
    "google-cloud-texttospeech>=2.27.0",
    "google-cloud-translate>=3.15.0",
    "google-genai>=1.17.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.0",
    "numpy>=2.2.6",
    "openai>=1.82.0",
    "pandas>=2.3.1",
    "posthog>=6.3.2",
    "pyaudio>=0.2.14",
    "pydantic>=2.11.5",
    "pydub>=0.25.1",
    "pythainlp>=5.1.2",
    "python-crfsuite>=0.9.11",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "sentry-sdk[fastapi]>=2.21.0",
    "sounddevice>=0.5.2",
    "speechmatics-batch>=0.2.0",
    "tltk>=1.9.1",
    "uvicorn>=0.34.3",
]
